fix bltouch pins, invert x stepper direction. confirm all hw is working

--- a/klipper/skr-3-ez/printer.cfg
+++ b/klipper/skr-3-ez/printer.cfg
@@ -27,7 +27,7 @@ max_z_accel: 100
 [stepper_x]
 # PINS
 step_pin: PD4
-dir_pin: PD3
+dir_pin: !PD3
 enable_pin: !PD6
 endstop_pin: ^PC1
 # RESOLUTION
@@ -144,8 +144,8 @@ pin: PB5
 ################ PROBE CONFIGURATION ################
 [bltouch]
 # PINS
-sensor_pin: ^PC14
-control_pin: PC13
+sensor_pin: ^PC13 # PROBE
+control_pin: PE5 # SERVO PWM
 # COORDINATES
 x_offset: -32
 y_offset: -41
@@ -190,7 +190,7 @@ max_temp: 100
 
 ################ MCU ################
 [mcu]
-serial:
+serial: /dev/serial/by-id/usb-Klipper_stm32h743xx_410047000651303231393036-if00
 
 [virtual_sdcard]
 path: ~/gcode_files
