fix stepper current, fix bltouch,mesh

--- a/klipper/skr-3-ez/printer.cfg
+++ b/klipper/skr-3-ez/printer.cfg
@@ -42,7 +42,7 @@ homing_speed: 50
 # DRIVER
 [tmc2209 stepper_x]
 uart_pin: PD5
-run_current: 1.082 # VREF 1.499 V as per https://www.youtube.com/watch?v=ASQYIWKPw9g (current calculated based on Creality stock motherboard 150mΩ sense pin)
+run_current: 0.75
 # diag_pin:
 
 [stepper_y]
@@ -63,7 +63,7 @@ homing_speed: 50
 # DRIVER
 [tmc2209 stepper_y]
 uart_pin: PD0
-run_current: 0.869 # VREF 1.203 V as per https://www.youtube.com/watch?v=ASQYIWKPw9g (current calculated based on Creality stock motherboard 150mΩ sense pin)
+run_current: 0.75
 # diag_pin:
 
 [stepper_z]
@@ -81,7 +81,7 @@ position_min: -5
 # DRIVER
 [tmc2209 stepper_z]
 uart_pin: PE1
-run_current: 0.876 # VREF 1.213 V as per https://www.youtube.com/watch?v=ASQYIWKPw9g (current calculated based on Creality stock motherboard 150mΩ sense pin)
+run_current: 1.25
 # diag_pin:
 
 [extruder]
@@ -94,23 +94,23 @@ sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PA2
 # RESOLUTION
 microsteps: 16
-rotation_distance: 7.6190
+rotation_distance: 7.470
 # FILAMENT SPECIFICATIONS
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 # TEMPERATURE CONTROL
-control: pid
-pid_Kp: 21.761
-pid_Ki: 1.261
-pid_Kd: 93.844
+#control: pid
+#pid_Kp: 21.761
+#pid_Ki: 1.261
+#pid_Kd: 93.844
 min_temp: 0
 max_temp: 300
+pressure_advance = 0.0665
 # DRIVER
 [tmc2209 extruder]
 uart_pin: PC6
-run_current: 0.687 # VREF 0.951 V as per https://www.youtube.com/watch?v=ASQYIWKPw9g (current calculated based on Creality stock motherboard 150mΩ sense pin)
+run_current: 0.58
 # diag_pin:
-
 
 ################ HEATED BED ################
 [heater_bed]
@@ -119,10 +119,10 @@ heater_pin: PD7
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PA1
 # TEMPERATURE CONTROL
-control: pid
-pid_Kp: 68.385
-pid_Ki: 1.093
-pid_Kd: 1069.370
+#control: pid
+#pid_Kp: 68.385
+#pid_Ki: 1.093
+#pid_Kd: 1069.370
 min_temp: 0
 max_temp: 130
 
@@ -149,14 +149,15 @@ control_pin: PE5 # SERVO PWM
 # COORDINATES
 x_offset: -32
 y_offset: -41
-z_offset: 2.900
+#z_offset: 4.2
 # SPEED
-speed:10
+speed:5
 # SAMPLING
 samples:1
 samples_result:average
-probe_with_touch_mode: true
-stow_on_each_sample: false
+sample_retract_dist: 5
+# pin_up_touch_mode_reports_triggered: False
+# probe_with_touch_mode: True
 
 [safe_z_home]
 # COORDINATES
@@ -175,12 +176,27 @@ mesh_max: 220, 185
 # MESH ALGORITHM
 algorithm: bicubic
 probe_count: 5,4
-fade_start: 1
-fade_end: 3
-fade_target: 0
+#fade_start: 1
+#fade_end: 3
+#fade_target: 0
 mesh_pps: 2,2
 algorithm: bicubic
 bicubic_tension: 0.2
+horizontal_move_z: 15
+
+[input_shaper]
+shaper_freq_x = 36.0  # frequency for the X mark of the test model
+shaper_freq_y = 60.3  # frequency for the Y mark of the test model
+shaper_type: ei
+damping_ratio_x: 0.1
+damping_ratio_y: 0.1
+
+################ FILAMENT SENSOR ################
+[filament_switch_sensor filament_sensor]
+pause_on_runout: False
+runout_gcode: PAUSE
+insert_gcode: RESUME
+switch_pin: !PC2
 
 ################ EXTERNAL INTERFACES ################
 [temperature_sensor rpi_host]
@@ -264,3 +280,39 @@ rename_existing: CANCEL_PRINT_BASE
 gcode:
   TURN_OFF_HEATERS
   CANCEL_PRINT_BASE
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bltouch]
+#*# z_offset = 7.250
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.950000, 0.300000, 0.212500, 0.700000, 1.450000
+#*# 	  0.925000, 0.375000, 0.025000, 0.212500, 0.637500
+#*# 	  0.925000, 0.300000, -0.000000, 0.050000, 0.237500
+#*# 	  0.400000, -0.075000, -0.250000, 0.050000, 0.525000
+#*# x_count = 5
+#*# y_count = 4
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 7.0
+#*# max_x = 220.0
+#*# min_y = 7.0
+#*# max_y = 184.99
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 22.256
+#*# pid_ki = 1.268
+#*# pid_kd = 97.647
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 69.602
+#*# pid_ki = 1.389
+#*# pid_kd = 871.765
